i18n(workflow): 将并行化工作流中的验证消息和日志本地化为中文
- 将参数验证错误消息从英文翻译为中文
- 将输入处理相关日志消息本地化为中文
- 保留原有功能逻辑不变，仅修改文本内容
- 更新集合操作方法调用以使用较新的 API